--- a/people/alumni/wong_danny.qmd
+++ b/people/alumni/wong_danny.qmd
@@ -1,10 +1,10 @@
 ---
-title: "Leo Niehorster-Cook"
-sortby: "Niehorster-Cook, Leo"
-subtitle: "Research Assistant"
-image: placeholder.png
-started: "Fall 2021"
-ended: "Fall 2021"
+title: "Danny Wong"
+sortby: "Wong, Danny"
+subtitle: "Doctoral Candidate"
+# image: placeholder.png
+started: "2015"
+ended: "2019"
 toc: false
 about:
   id: person-profile
@@ -23,14 +23,9 @@ about:
 ```
 
 :::{#person-profile}
-## Semesters
-- Fall 2021, *Research Assistant*
 
-## Education
+- Consultant Anaesthetist, Guys & St Thomas' NHS Foundation Trust
+- PhD at National Institute of Academic Anaesthesia Health Services Research Centre, Royal College of Anaesthetists & UCL
+- Personal [blog](https://dannyjnwong.github.io)
 
-[University of Kansas]{.fw-bold} | Lawrence, KS, USA<br />
-Psychology, Philosophy, and Linguistics Major
 :::
-
-
-
