--- a/contact.qmd
+++ b/contact.qmd
@@ -1,5 +1,5 @@
 ---
-pagetitle: "Contact | AffCom Lab"
+pagetitle: "Contact | UCLHAL"
 toc: false
 email-obfuscation: javascript
 ---
@@ -15,19 +15,15 @@ email-obfuscation: javascript
 
 ## Visit Us
 
-The AffCom Lab is located in **Fraser Hall Room #455** at the University of Kansas.
+The UCL Health Algorithm Laboratory is based at **Institute of Health Informatics** at University College London.
 
-> **Street Address:** 1415 Jayhawk Blvd, Lawrence, KS 66044
->
-> **Visitor Parking:** 1218 Mississippi St, Lawrence, KS 66045
+> **Street Address:** 222 Euston Road, London, NW1 2DA
 
 ```{=html}
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3102.5478774799594!2d-95.24574508375895!3d38.95715607956168!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87bf6f4b95fc69bd%3A0xae3cf5ffd7e06ef!2sFraser%20Hall%2C%20Lawrence%2C%20KS%2066044!5e0!3m2!1sen!2sus!4v1661872494183!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2482.3081696623235!2d-0.137801584241075!3d51.52590731717089!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761b260446fa31%3A0xc97a5981bb924a0d!2sUCL%20Institute%20Of%20Health%20Informatics!5e0!3m2!1sen!2suk!4v1668376825965!5m2!1sen!2suk" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 ```
 
 ## Email Us
 
-```{=html}
-<script src="https://cdn.form.io/formiojs/formio.embed.js?src=https://ejlffjjksoybevj.form.io/affcomlabcontactform&libs=true"></script>
-```
+hello@uclhal.org
 
