test academicons on personal page

--- a/people/ras/tomlinson_chris.qmd
+++ b/people/ras/tomlinson_chris.qmd
@@ -17,6 +17,10 @@ about:
     - icon: twitter
       text: twitter
       href: https://www.twitter.com/tomlincr
+    # Note uses -text: instead of - icon:
+    # See: https://github.com/quarto-ext/fontawesome/issues/6#issuecomment-1188620081
+    - text: "{{< ai researchgate >}}"
+        href: https://www.researchgate.net/profile/Christopher-Tomlinson
 ---
 
 ```{=html}
