remove fas icons

--- a/people/ras/tomlinson_chris.qmd
+++ b/people/ras/tomlinson_chris.qmd
@@ -28,8 +28,8 @@ about:
     - icon: linkedin
       text: LinkedIn
       href: https://www.linkedin.com/in/tomlincr
-    - text: "{{< fa building-columns >}} UCL"
-      href: https://iris.ucl.ac.uk/iris/browse/profile?upi=CTOML04
+    # - text: "{{< fa building-columns >}} UCL"
+    #   href: https://iris.ucl.ac.uk/iris/browse/profile?upi=CTOML04
     
     
     
