--- a/people/ras/tomlinson_chris.qmd
+++ b/people/ras/tomlinson_chris.qmd
@@ -16,20 +16,20 @@ about:
     - icon: twitter
       text: Twitter
       href: https://www.twitter.com/tomlincr
-    # - text: "{{< ai researchgate >}}"
-    #   href: https://www.researchgate.net/profile/Christopher-Tomlinson
-    # - text: "{{< ai orcid >}} ORCiD"
-    #   href: https://orcid.org/0000-0002-0903-5395
-    # - text: "{{< ai google-scholar >}}"
-    #   href: https://scholar.google.co.uk/citations?hl=en&authuser=3&user=NcKe1aEAAAAJ
+    - text: "{{< ai researchgate >}}"
+      href: https://www.researchgate.net/profile/Christopher-Tomlinson
+    - text: "{{< ai orcid >}} ORCiD"
+      href: https://orcid.org/0000-0002-0903-5395
+    - text: "{{< ai google-scholar >}}"
+      href: https://scholar.google.co.uk/citations?hl=en&authuser=3&user=NcKe1aEAAAAJ
     - icon: github
       text: GitHub
       href: https://github.com/tomlincr
     - icon: linkedin
       text: LinkedIn
       href: https://www.linkedin.com/in/tomlincr
-    # - text: "{{< fa building-columns >}} UCL"
-    #   href: https://iris.ucl.ac.uk/iris/browse/profile?upi=CTOML04 
+    - text: "{{< fa building-columns >}} UCL"
+      href: https://iris.ucl.ac.uk/iris/browse/profile?upi=CTOML04 
 ---
 
 ```{=html}
