--- a/publications/preprints/handy2021.qmd
+++ b/publications/preprints/handy2021.qmd
@@ -2,7 +2,7 @@
 title: "A nationwide deep learning pipeline to predict stroke and COVID-19 death in atrial fibrillation"
 type: "preprint"
 author: "Alex Handy, Angela Wood, Cathie Sudlow, Chris Tomlinson, Frank Kee, Johan H Thygesen, Mohammad Mamouei, Reecha Sofat, Richard Dobson, Samantha Ip, Spiros Denaxas, on behalf of the CVD-COVID-UK Consortium"
-year: "2022"
+year: "2021"
 publication: "medRxiv"
 # preprint: "https://psyarxiv.com/futv2/"
 doi: "10.1101/2021.12.20.21268113"
@@ -20,9 +20,11 @@ categories:
   - BHF Data Science Centre
 ---
 
-## Citation (APA 7)
+## Citation
 
-> A nationwide deep learning pipeline to predict stroke and COVID-19 death in atrial fibrillation | medRxiv. (n.d.). Retrieved 14 November 2022, from https://www.medrxiv.org/content/10.1101/2021.12.20.21268113v1
+> A nationwide deep learning pipeline to predict stroke and COVID-19 death in atrial fibrillation
+Alex Handy, Angela Wood, Cathie Sudlow, Christopher Tomlinson, Frank Kee, Johan H Thygesen, Mohammad Mamouei, Reecha Sofat, Richard Dobson, Samantha Ip, Spiros Denaxas.
+medRxiv 2021.12.20.21268113; doi: https://doi.org/10.1101/2021.12.20.21268113
 
  
 ## Abstract
