--- a/people.qmd
+++ b/people.qmd
@@ -1,5 +1,5 @@
 ---
-pagetitle: "People | AffCom Lab"
+pagetitle: "People | UCL Health Algorithms Laboratory"
 toc: false
 listing:
   - id: research-staff
