--- a/publications/articles/alhindawi_2022b.qmd
+++ b/publications/articles/alhindawi_2022b.qmd
@@ -12,7 +12,7 @@ categories:
   - eye tracking
   - gaze-scene intersection
   - point of regard estimation
-  - rea-time inference
+  - real-time inference
 ---
 
 ## Citation (APA 7)
