Awesome link page created for eductional resources

--- a/awesome.qmd
+++ b/awesome.qmd
@@ -2,7 +2,7 @@
 pagetitle: "Awesome links | UCL Health Algorithm Lab"
 toc: false
 listing:
-  contents: posts
+  contents: awesome_links
   sort: "date desc"
   type: default
   categories: true
