--- a/resources.qmd
+++ b/resources.qmd
@@ -1,6 +1,7 @@
 ---
 pagetitle: "Resources | UCL Health Algorithm Lab"
 toc: false
+email-obfuscation: references
 listing:
   type: table
   contents: resources
@@ -10,11 +11,12 @@ listing:
 ---
 
 # Resources
-Helpful resources listed below:
+Helpful [resources](resources.html) collated below:
 
 * [Onboarding](#category=onboarding) information for UCL HAL 
+  * [**Start here!**](resources/onboarding/start.html)
 * What is [HYLODE](#category=hylode)?
-* An introduction to the [Data-Clinic](#category=data-clinic)
+* An introduction to the [Data Clinic](#category=data_clinic)
 * [EPIC](#category=epic)-specific training
 * Curated [datasets](#category=datasets)
-* [External-resources](#category=external-resources) that we have found helpful to learn data science
+* [External resources](#category=external_resources) that we have found helpful to learn data science
