--- a/people/academic/harris_steve.qmd
+++ b/people/academic/harris_steve.qmd
@@ -2,8 +2,8 @@
 title: "Steve Harris"
 sortby: "1"
 subtitle: "Lab Director"
-image: steve_harris_avatar.jpg
-started: "Fall 2020"
+image: harris_steve.jpg
+started: "2015"
 toc: false
 # resources: 
 #   - "your_cv.pdf"
@@ -24,7 +24,7 @@ about:
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
     <li class="breadcrumb-item"><a href="../../people.html">People</a></li>
-    <li class="breadcrumb-item active">Research Staff</li>
+    <!-- <li class="breadcrumb-item active">Academic Members</li> -->
     <li class="breadcrumb-item active" aria-current="page">{{< meta title >}}</li>
   </ol>
 </nav>
