--- a/people/academic/wilson_matt.qmd
+++ b/people/academic/wilson_matt.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Matt Wilson"
+sortby: "Wilson, Matt"
 subtitle: "PhD Student"
 image: matt.jpg
 started: "September 2018"
@@ -21,7 +22,7 @@ about:
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
     <li class="breadcrumb-item"><a href="../../people.html">People</a></li>
-    <li class="breadcrumb-item active">Research Staff</li>
+    <!-- <li class="breadcrumb-item active">Academic Members</li> -->
     <li class="breadcrumb-item active" aria-current="page">{{< meta title >}}</li>
   </ol>
 </nav>
