--- a/people/clinical/hrishee_vaidya.qmd
+++ b/people/clinical/hrishee_vaidya.qmd
@@ -1,8 +1,8 @@
 ---
 title: "Hrisheekesh Vaidya"
 sortby: "Vaidya, Hrisheekesh"
-subtitle: "Data Science Fellow"
-image: hrishee1.jpg
+subtitle: "Clinical Fellow in Data Science & Critical Care"
+image: hrishee_vaidya.jpg
 started: "August 2022"
 toc: false
 about:
@@ -27,7 +27,7 @@ about:
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
     <li class="breadcrumb-item"><a href="../../people.html">People</a></li>
-    <li class="breadcrumb-item active">Research Staff</li>
+    <!-- <li class="breadcrumb-item active">Clinical Members</li> -->
     <li class="breadcrumb-item active" aria-current="page">{{< meta title >}}</li>
   </ol>
 </nav>
