--- a/people/academic/tomlinson_chris.qmd
+++ b/people/academic/tomlinson_chris.qmd
@@ -2,7 +2,7 @@
 title: "Chris Tomlinson"
 sortby: "Tomlinson, Chris"
 subtitle: "PhD Student"
-image: girard_jeffrey.jpg
+# image: girard_jeffrey.jpg
 started: "September 2020"
 toc: false
 # resources: 
@@ -38,7 +38,7 @@ about:
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
     <li class="breadcrumb-item"><a href="../../people.html">People</a></li>
-    <li class="breadcrumb-item active">Research Staff</li>
+    <!-- <li class="breadcrumb-item active">Academic Members</li> -->
     <li class="breadcrumb-item active" aria-current="page">{{< meta title >}}</li>
   </ol>
 </nav>
