--- a/people/academic/thomasfrostpage.qmd
+++ b/people/academic/thomasfrostpage.qmd
@@ -2,7 +2,7 @@
 title: "Thomas Frost"
 sortby: "Frost, Thomas"
 subtitle: "PhD Student"
-image: placeholder.jpg
+image: thomasfrost.jpg
 started: "September 2022"
 toc: false
 # resources: 
@@ -35,7 +35,7 @@ about:
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
     <li class="breadcrumb-item"><a href="../../people.html">People</a></li>
-    <li class="breadcrumb-item active">Research Staff</li>
+    <!-- <li class="breadcrumb-item active">Academic Members</li> -->
     <li class="breadcrumb-item active" aria-current="page">{{< meta title >}}</li>
   </ol>
 </nav>
