add CDT members

--- a/resources/academic/CDT.qmd
+++ b/resources/academic/CDT.qmd
@@ -15,3 +15,6 @@ We offer a unique programme consisting of a 1 year MRes followed by a 3 year PhD
 
 NB applicants with a clinical background or degree in Biomedical Science **must be able to demonstrate strong computational skills, prior to applying**.
 
+Current lab group members:
+* 2020 intake: Aasiyah Rashan, Chris Tomlinson
+* 2021 intake: Tom Frost, Jen Hunter
