--- a/resources/academic/CDT.qmd
+++ b/resources/academic/CDT.qmd
@@ -15,6 +15,10 @@ We offer a unique programme consisting of a 1 year MRes followed by a 3 year PhD
 
 NB applicants with a clinical background or degree in Biomedical Science **must be able to demonstrate strong computational skills, prior to applying**.
 
-Current lab group members:
-* 2020 intake: Aasiyah Rashan, Chris Tomlinson
-* 2021 intake: Tom Frost, Jen Hunter
+Current lab group members:  
+* 2020 intake: Aasiyah Rashan, Chris Tomlinson  
+* 2021 intake: Tom Frost, Jen Hunter  
+
+Previous [CDT projects](https://www.ucl.ac.uk/aihealth-cdt/study/projects) offered by the lab group:  
+* 2022: Use of reinforcement learning to optimise dosing of IV infusions in critical care. (Supervisor: Steve Harris, Student: Tom Frost)  
+* 2021: Hyperlocal beds plus demand forecasting within the NHS (Supervisor: Steve Harris, Student: Jen Hunter)  
