--- a/publications.qmd
+++ b/publications.qmd
@@ -3,18 +3,19 @@ pagetitle: "Publications | UCL Health Algorithms Laboratory"
 toc: false
 listing:
   - id: articles
-    contents: "publications/*/**.qmd"
-    template: ./ejs/article.ejs
-    categories: true
+    contents:
+      - "publications/uclhal_quarto_listing.yaml"
+    template: ejs/publications.ejs
+    # categories: true
     sort:
       - "year desc"
       - "title"
-    sort-ui: [title,author,publication,year]
-    filter-ui: [title,author,publication,year]
-    page-size: 10
-    field-display-names: 
-      publication: "Publication"
-      year: "Year"
+    sort-ui: [title,authors,journal,year]
+    filter-ui: [title,authors,journal,year]
+    page-size: 50
+    # field-display-names: 
+    #   journal: "Publication"
+    #   year: "Year"
 ---
 
 ```{=html}
@@ -25,6 +26,7 @@ listing:
   </ol>
 </nav>
 ```
+
 
 :::{#articles}
 :::
