--- a/resources/data_clinic/data-clinic-for-fellows.qmd
+++ b/resources/data_clinic/data-clinic-for-fellows.qmd
@@ -5,8 +5,9 @@ author: "Ruaraidh Campbell"
 date: 2022-11-16
 toc: true
 categories: 
-    - data_clinic
-    - onboarding
+    - Data Clinic
+    - Noobie
+    - UCLH
 ---
 
 # What is the 'Data Clinic'? 
